--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Assets\Script\BingoManager.cs" />
     <Compile Include="Assets\Script\CellClass.cs" />
+    <Compile Include="Assets\Script\LogClass.cs" />
+    <Compile Include="Assets\Script\LogText.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.26f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
